# recipe_app

./: pyproject.toml
recipe_project/: db.sqlite3  manage.py
recipe_project/main/: admin.py  forms.py  models.py  views.py
recipe_project/main/migrations/: 0001_initial.py
recipe_project/recipe_project/: asgi.py  settings.py  urls.py  wsgi.py
recipe_project/templates/: base.html  home.html
