[tool.poetry]
name = "recipe_app"
version = "0.1.0"
description = "Webapp with django backend for recipes"
authors = ["Andreas Kanz <andreas@akanz.de>", "Jerika Kanz <jerikacapila@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"
Django = "^3.2.7"
black = "^21.9b0"
pylint = "^2.11.1"
Pillow = "^8.3.2"
django-autoslug = "^1.9.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
