[tool.poetry]
name = "recipe_app"
version = "0.1.0"
description = "Webapp with django backend for recipes"
authors = ["Andreas Kanz <andreas@akanz.de>", "Jerika Kanz <jerikacapila@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9.*"
Django = "^3.2.18"
black = "^21.9b0"
pylint = "^2.11.1"
Pillow = "^9.3.0"
django-autoslug = "^1.9.8"

[tool.poetry.dev-dependencies]
black = {version = "^21.9b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
